--- a/index.html
+++ b/index.html
@@ -22,8 +22,53 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         header {
-            font-size: 24px;
+            font-size: 36px;
             margin: 0;
+        }
+        nav {
+            margin: 0;
+            padding: 10px;
+            background-color: #0056b3;
+        }
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .container {
+            max-width: 1000px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 10px;
+        }
+        .artigo {
+            margin-bottom: 30px;
+        }
+        .artigo h2 {
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 5px;
+            font-size: 24px;
+            margin-top: 0;
+        }
+        .artigo p {
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
         footer {
             font-size: 16px;
@@ -33,42 +78,13 @@
             background-color: #343a40;
             color: #fff;
         }
-        h1 {
-            color: #333;
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-            font-size: 28px;
-        }
-        .paragrafo {
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-        strong {
-            color: #333;
-        }
         a {
-            color: #333;
+            color: #007bff;
             text-decoration: none;
             font-weight: bold;
-            border: 1px solid #333;
-            padding: 5px 10px;
-            border-radius: 5px;
-            transition: all 0.3s ease;
         }
         a:hover {
-            background-color: #333;
-            color: #fff;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            border-radius: 10px;
-            margin-top: 20px;
-            margin-bottom: 20px;
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -77,42 +93,51 @@
         <header>DUMONT NEWS</header>
     </div>
 
+    <nav>
+        <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="#">Últimas Notícias</a></li>
+            <li><a href="#">Artigos</a></li>
+            <li><a href="#">Sobre Nós</a></li>
+            <li><a href="#">Contato</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        <h1>Adiós</h1>
+        <div class="artigo">
+            <h2>Adiós</h2>
+            <p><strong>15 de Fevereiro</strong></p>
+            <p>"E a vida vai ser boa e linda, mas não sem um coração partido", a definição para o adeus ao Santos Dumont. Saudades Lilian, professora incrível que me ajudou demais na criação desse site, que super abraçou a minha ideia de criar um jornal para a escola. Infelizmente não estou mais lá, mas o básico que sei sobre programação aprendi com a Lilian. Acho que fui o único aluno a ficar estressado por não saber criar um botão para acessar outra página. Talvez aqui não tenha mais a continuação desse site, mas não significa que vou parar com a programação de sites, Dras Corp é a prova viva disso.</p>
+        </div>
 
-        <p class="paragrafo"><strong>15 de Fevereiro</strong></p>
-        
-        <p>"E a vida vai ser boa e linda, mas não sem um coração partido", a definição para o adeus ao Santos Dumont. Saudades Lilian, professora incrível que me ajudou demais na criação desse site, que super abraçou a minha ideia de criar um jornal para a escola. Infelizmente não estou mais lá, mas o básico que sei sobre programação aprendi com a Lilian. Acho que fui o único aluno a ficar estressado por não saber criar um botão para acessar outra página. Talvez aqui não tenha mais a continuação desse site, mas não significa que vou parar com a programação de sites, Dras Corp é a prova viva disso.</p>
+        <div class="artigo">
+            <h2>Até 2024</h2>
+            <p><strong>15 de Dezembro 2023</strong></p>
+            <p>Sexta-Feira chegou, a pequena despedida aconteceu. O que podemos dizer sobre? Teve vários salgados, refrigerantes e bolo, se não fosse a professora Lilian nada teria acontecido. A partir dessa atualização sobre os acontecimentos do Colégio, eu venho dizer o quanto a Lilian é importante para todos nós. Acredito que no começo deve ter sido bem difícil para ela, até porque ela começou a dar aula para nós (1° ano) na pandemia, onde muitos dos alunos nem sequer participavam das aulas online. Mas a Lilian não desistiu, tem uma família linda. Sei que em um site escolar não podemos dar nossas opiniões, mas esse é um momento importante. Não sei se no ano que vem eu vou estar aqui novamente, pretendo muito ficar, até porque, esse site tem muito o que evoluir, e você professora, vai me ajudar. Até 2024.</p>
+        </div>
 
-        <h1>Até 2024</h1>
+        <div class="artigo">
+            <h2>Despedida</h2>
+            <p><strong>13 de Dezembro 2023</strong></p>
+            <p>As aulas estão prestes a acabar, mas não poderia deixar passar batido, a professora Lilian Alexandre junto com os alunos do 9° e 1° ano irão fazer uma pequena despedida Sexta-Feira. Por mais que seja um pequeno ou grande "alívio", podemos dizer que por um período de tempo, durante as férias, vamos sentir falta, da escola ou dos professores. Por mais que pareça algo de outro mundo um aluno sentir falta de um professor, muitas das vezes o aluno se sente mais à vontade na escola do que em casa.</p>
+        </div>
 
-        <p class="paragrafo"><strong>15 de Dezembro 2023</strong></p>
+        <div class="artigo">
+            <h2>Se Liga!</h2>
+            <p><strong>09 de Dezembro 2023</strong></p>
+            <p>O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popularmente pelos professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano. Todos os alunos são obrigados a fazer, mas nem todos comparecem à escola. O "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas.</p>
+        </div>
 
-        <p>Sexta-Feira chegou, a pequena despedida aconteceu. O que podemos dizer sobre? Teve vários salgados, refrigerantes e bolo, se não fosse a professora Lilian nada teria acontecido. A partir dessa atualização sobre os acontecimentos do Colégio, eu venho dizer o quanto a Lilian é importante para todos nós. Acredito que no começo deve ter sido bem difícil para ela, até porque ela começou a dar aula para nós (1° ano) na pandemia, onde muitos dos alunos nem sequer participavam das aulas online. Mas a Lilian não desistiu, tem uma família linda. Sei que em um site escolar não podemos dar nossas opiniões, mas esse é um momento importante. Não sei se no ano que vem eu vou estar aqui novamente, pretendo muito ficar, até porque, esse site tem muito o que evoluir, e você professora, vai me ajudar. Até 2024.</p>
-
-        <h1>Despedida</h1>
-
-        <p class="paragrafo"><strong>13 de Dezembro 2023</strong></p>
-
-        <p>As aulas estão prestes a acabar, mas não poderia deixar passar batido, a professora Lilian Alexandre junto com os alunos do 9° e 1° ano irão fazer uma pequena despedida Sexta-Feira. Por mais que seja um pequeno ou grande "alívio", podemos dizer que por um período de tempo, durante as férias, vamos sentir falta, da escola ou dos professores. Por mais que pareça algo de outro mundo um aluno sentir falta de um professor, muitas das vezes o aluno se sente mais à vontade na escola do que em casa.</p>
-
-        <h1>Se Liga!</h1>
-
-        <p class="paragrafo"><strong>09 de Dezembro 2023</strong></p>
-
-        <p>O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popularmente pelos professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano. Todos os alunos são obrigados a fazer, mas nem todos comparecem à escola. O "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas.</p>
-
-        <h1>Se Liga, O que é?</h1>
-
-        <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem. Cada instituição de ensino tem autonomia para designar o professor que será alocado para as atividades pedagógicas a serem desenvolvidas. A Secretaria de Estado da Educação (Seed-PR) acompanha a frequência e a evolução de resultado dos alunos participantes. O objetivo é desenvolver e aprimorar os conhecimentos essenciais necessários dos estudantes que apresentam dificuldades, para que eles adquiram os conhecimentos referentes ao ano/série cursado.</p>
-
-        <p>Informações retiradas do site OFICIAL da Secretaria da Educação.</p>
-         
-        <a href="pagina.html">Leia mais</a>
+        <div class="artigo">
+            <h2>Se Liga, O que é?</h2>
+            <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem. Cada instituição de ensino tem autonomia para designar o professor que será alocado para as atividades pedagógicas a serem desenvolvidas. A Secretaria de Estado da Educação (Seed-PR) acompanha a frequência e a evolução de resultado dos alunos participantes. O objetivo é desenvolver e aprimorar os conhecimentos essenciais necessários dos estudantes que apresentam dificuldades, para que eles adquiram os conhecimentos referentes ao ano/série cursado.</p>
+            <p>Informações retiradas do site OFICIAL da Secretaria da Educação.</p>
+        </div>
     </div>
 
     <footer>
         <p>Coluna Adryann Cruzarolli - Dumont News</p>
+        <p><a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a></p>
     </footer>
 
 </body>
