--- a/index.html
+++ b/index.html
@@ -7,105 +7,151 @@
     <link rel="shortcut icon" href="logo_2.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <style>
+        /* Estilos gerais */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
             color: #333;
             margin: 0;
             padding: 0;
+            line-height: 1.6;
         }
+
+        /* Cabeçalho */
         #cabecalho {
-            background-color: #007bff;
+            background-color: #0056b3;
             color: #fff;
             text-align: center;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 30px 0;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
         }
+
         header {
-            font-size: 36px;
+            font-size: 40px;
             margin: 0;
         }
+
+        /* Barra de navegação */
+        nav {
+            text-align: center;
+            background-color: #007bff;
+            padding: 10px 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            font-size: 18px;
+            margin: 0 10px;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #0056b3;
+        }
+
+        /* Container principal */
         .container {
-            max-width: 900px;
+            max-width: 1100px;
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
+
+        /* Estilos dos artigos */
         .artigo {
             margin-bottom: 30px;
         }
+
         .artigo h2 {
-            color: #007bff;
+            color: #0056b3;
             font-size: 28px;
             margin-top: 0;
             margin-bottom: 10px;
             border-bottom: 2px solid #007bff;
             padding-bottom: 5px;
         }
+
         .artigo p {
             font-size: 18px;
-            line-height: 1.6;
             margin-bottom: 20px;
         }
+
+        /* Rodapé */
         footer {
             font-size: 14px;
             color: #fff;
             text-align: center;
             padding: 15px;
             background-color: #343a40;
-            position: absolute;
+            position: fixed;
             width: 100%;
             bottom: 0;
         }
+
+        /* Links */
         a {
             color: #007bff;
             text-decoration: none;
             font-weight: bold;
         }
+
         a:hover {
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
+
+    <!-- Cabeçalho -->
     <div id="cabecalho">
         <header>DUMONT NEWS</header>
     </div>
 
+    <!-- Barra de Navegação -->
+    <nav>
+        <a href="pagina.html">Ir para Página</a> <!-- Link para redirecionar -->
+    </nav>
+
+    <!-- Container principal -->
     <div class="container">
+
         <div class="artigo">
             <h2>Adiós</h2>
             <p><strong>15 de Fevereiro</strong></p>
-            <p>"E a vida vai ser boa e linda, mas não sem um coração partido", a definição para o adeus ao Santos Dumont. Saudades Lilian, professora incrível que me ajudou demais na criação desse site, que super abraçou a minha ideia de criar um jornal para a escola. Infelizmente não estou mais lá, mas o básico que sei sobre programação aprendi com a Lilian. Acho que fui o único aluno a ficar estressado por não saber criar um botão para acessar outra página. Talvez aqui não tenha mais a continuação desse site, mas não significa que vou parar com a programação de sites, Dras Corp é a prova viva disso.</p>
+            <p>"E a vida vai ser boa e linda, mas não sem um coração partido", a definição para o adeus ao Santos Dumont. Saudades Lilian, professora incrível que me ajudou demais na criação desse site, que super abraçou a minha ideia de criar um jornal para a escola...</p>
         </div>
 
         <div class="artigo">
             <h2>Até 2024</h2>
             <p><strong>15 de Dezembro 2023</strong></p>
-            <p>Sexta-Feira chegou, a pequena despedida aconteceu. O que podemos dizer sobre? Teve vários salgados, refrigerantes e bolo, se não fosse a professora Lilian nada teria acontecido. A partir dessa atualização sobre os acontecimentos do Colégio, eu venho dizer o quanto a Lilian é importante para todos nós. Acredito que no começo deve ter sido bem difícil para ela, até porque ela começou a dar aula para nós (1° ano) na pandemia, onde muitos dos alunos nem sequer participavam das aulas online. Mas a Lilian não desistiu, tem uma família linda. Sei que em um site escolar não podemos dar nossas opiniões, mas esse é um momento importante. Não sei se no ano que vem eu vou estar aqui novamente, pretendo muito ficar, até porque, esse site tem muito o que evoluir, e você professora, vai me ajudar. Até 2024.</p>
+            <p>Sexta-Feira chegou, a pequena despedida aconteceu. O que podemos dizer sobre? Teve vários salgados, refrigerantes e bolo, se não fosse a professora Lilian nada teria acontecido...</p>
         </div>
 
         <div class="artigo">
             <h2>Despedida</h2>
             <p><strong>13 de Dezembro 2023</strong></p>
-            <p>As aulas estão prestes a acabar, mas não poderia deixar passar batido, a professora Lilian Alexandre junto com os alunos do 9° e 1° ano irão fazer uma pequena despedida Sexta-Feira. Por mais que seja um pequeno ou grande "alívio", podemos dizer que por um período de tempo, durante as férias, vamos sentir falta, da escola ou dos professores. Por mais que pareça algo de outro mundo um aluno sentir falta de um professor, muitas das vezes o aluno se sente mais à vontade na escola do que em casa.</p>
+            <p>As aulas estão prestes a acabar, mas não poderia deixar passar batido, a professora Lilian Alexandre junto com os alunos do 9° e 1° ano irão fazer uma pequena despedida...</p>
         </div>
 
         <div class="artigo">
             <h2>Se Liga!</h2>
             <p><strong>09 de Dezembro 2023</strong></p>
-            <p>O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popularmente pelos professores como o levanta defunto, onde é retomado o conteúdo do decorrer do ano. Todos os alunos são obrigados a fazer, mas nem todos comparecem à escola. O "Se Liga" funciona com o intuito de ajudar aqueles alunos que ficaram com notas baixas.</p>
+            <p>O ano se passou muito rápido, faltando apenas alguns dias para acabar as aulas, começa uma nova etapa, o famoso "Se Liga", conhecido popularmente pelos professores como o levanta defunto...</p>
         </div>
 
         <div class="artigo">
             <h2>Se Liga, O que é?</h2>
-            <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem. Cada instituição de ensino tem autonomia para designar o professor que será alocado para as atividades pedagógicas a serem desenvolvidas. A Secretaria de Estado da Educação (Seed-PR) acompanha a frequência e a evolução de resultado dos alunos participantes. O objetivo é desenvolver e aprimorar os conhecimentos essenciais necessários dos estudantes que apresentam dificuldades, para que eles adquiram os conhecimentos referentes ao ano/série cursado.</p>
-            <p>Informações retiradas do site OFICIAL da Secretaria da Educação.</p>
+            <p>O Se Liga! é uma ação de intensificação de aprendizagem voltada para a recuperação da aprendizagem...</p>
         </div>
+
     </div>
 
+    <!-- Rodapé -->
     <footer>
         <p>Coluna Adryann Cruzarolli - Dumont News</p>
     </footer>
